--- a/pkg/snet/squic/BUILD.bazel
+++ b/pkg/snet/squic/BUILD.bazel
@@ -3,11 +3,15 @@ load("//tools:go.bzl", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["net.go"],
+    srcs = [
+        "early.go",
+        "net.go",
+    ],
     importpath = "github.com/scionproto/scion/pkg/snet/squic",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/log:go_default_library",
+        "//pkg/private/common:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/snet:go_default_library",
         "@com_github_quic_go_quic_go//:go_default_library",
