--- a/gateway/BUILD.bazel
+++ b/gateway/BUILD.bazel
@@ -14,7 +14,9 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//gateway/control:go_default_library",
+        "//gateway/control/connect:go_default_library",
         "//gateway/control/grpc:go_default_library",
+        "//gateway/control/happy:go_default_library",
         "//gateway/dataplane:go_default_library",
         "//gateway/pathhealth:go_default_library",
         "//gateway/pathhealth/policies:go_default_library",
@@ -22,6 +24,7 @@ go_library(
         "//gateway/routing:go_default_library",
         "//gateway/xnet:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/connect:go_default_library",
         "//pkg/daemon:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
@@ -41,6 +44,8 @@ go_library(
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
         "@com_github_quic_go_quic_go//:go_default_library",
+        "@com_github_quic_go_quic_go//http3:go_default_library",
+        "@com_github_scionproto_scion//pkg/proto/gateway/v1/gatewayconnect:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
     ],
 )
