hackathon: add server side plumbing

--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -10,9 +10,11 @@ go_library(
     importpath = "github.com/scionproto/scion/control/cmd/control",
     visibility = ["//visibility:private"],
     deps = [
+        "//bufgen/proto/control_plane/v1/control_planeconnect:go_default_library",
         "//control:go_default_library",
         "//control/beacon:go_default_library",
         "//control/beaconing:go_default_library",
+        "//control/beaconing/connect:go_default_library",
         "//control/beaconing/grpc:go_default_library",
         "//control/config:go_default_library",
         "//control/drkey:go_default_library",
@@ -20,8 +22,10 @@ go_library(
         "//control/ifstate:go_default_library",
         "//control/mgmtapi:go_default_library",
         "//control/onehop:go_default_library",
+        "//control/segreg/connect:go_default_library",
         "//control/segreg/grpc:go_default_library",
         "//control/segreq:go_default_library",
+        "//control/segreq/connect:go_default_library",
         "//control/segreq/grpc:go_default_library",
         "//control/trust:go_default_library",
         "//control/trust/grpc:go_default_library",
@@ -38,6 +42,7 @@ go_library(
         "//pkg/scrypto:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/snet:go_default_library",
+        "//pkg/snet/squic:go_default_library",
         "//private/app:go_default_library",
         "//private/app/appnet:go_default_library",
         "//private/app/command:go_default_library",
@@ -45,6 +50,7 @@ go_library(
         "//private/ca/api:go_default_library",
         "//private/ca/config:go_default_library",
         "//private/ca/renewal:go_default_library",
+        "//private/ca/renewal/connect:go_default_library",
         "//private/ca/renewal/grpc:go_default_library",
         "//private/discovery:go_default_library",
         "//private/drkey/drkeyutil:go_default_library",
@@ -71,6 +77,8 @@ go_library(
         "@com_github_go_chi_chi_v5//:go_default_library",
         "@com_github_go_chi_cors//:go_default_library",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
+        "@com_github_quic_go_quic_go//:go_default_library",
+        "@com_github_quic_go_quic_go//http3:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@in_gopkg_yaml_v2//:go_default_library",
         "@org_go4_netipx//:go_default_library",
