--- a/pkg/snet/squic/BUILD.bazel
+++ b/pkg/snet/squic/BUILD.bazel
@@ -2,7 +2,10 @@ load("//tools/lint:go.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["net.go"],
+    srcs = [
+        "early.go",
+        "net.go",
+    ],
     importpath = "github.com/scionproto/scion/pkg/snet/squic",
     visibility = ["//visibility:public"],
     deps = [
