--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -60,7 +60,9 @@ go_library(
         "//private/mgmtapi/jwtauth:go_default_library",
         "//private/mgmtapi/segments/api:go_default_library",
         "//private/periodic:go_default_library",
+        "//private/segment/segfetcher/connect:go_default_library",
         "//private/segment/segfetcher/grpc:go_default_library",
+        "//private/segment/segfetcher/happy:go_default_library",
         "//private/segment/seghandler:go_default_library",
         "//private/service:go_default_library",
         "//private/storage:go_default_library",
