--- a/private/segment/segfetcher/connect/BUILD.bazel
+++ b/private/segment/segfetcher/connect/BUILD.bazel
@@ -2,22 +2,18 @@ load("//tools/lint:go.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "sender.go",
-        "server.go",
-    ],
-    importpath = "github.com/scionproto/scion/control/beaconing/connect",
+    srcs = ["requester.go"],
+    importpath = "github.com/scionproto/scion/private/segment/segfetcher/connect",
     visibility = ["//visibility:public"],
     deps = [
         "//bufgen/proto/control_plane/v1/control_planeconnect:go_default_library",
-        "//control/beaconing:go_default_library",
-        "//control/beaconing/grpc:go_default_library",
-        "//control/onehop:go_default_library",
-        "//pkg/addr:go_default_library",
         "//pkg/connect:go_default_library",
+        "//pkg/private/serrors:go_default_library",
         "//pkg/proto/control_plane:go_default_library",
         "//pkg/segment:go_default_library",
         "//pkg/snet/squic:go_default_library",
+        "//private/segment/segfetcher:go_default_library",
+        "//private/segment/segfetcher/grpc:go_default_library",
         "@com_connectrpc_connect//:go_default_library",
         "@com_github_quic_go_quic_go//http3:go_default_library",
     ],
