--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -89,9 +89,9 @@ go_library(
         "@in_gopkg_yaml_v2//:go_default_library",
         "@org_go4_netipx//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//health:go_default_library",
-        "@org_golang_google_grpc//health/grpc_health_v1:go_default_library",
         "@org_golang_google_grpc//peer:go_default_library",
+        "@org_golang_x_net//http2:go_default_library",
+        "@org_golang_x_net//http2/h2c:go_default_library",
         "@org_golang_x_sync//errgroup:go_default_library",
     ],
 )
