hackathon: add trust material RPCs

--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -29,6 +29,7 @@ go_library(
         "//control/segreq/connect:go_default_library",
         "//control/segreq/grpc:go_default_library",
         "//control/trust:go_default_library",
+        "//control/trust/connect:go_default_library",
         "//control/trust/grpc:go_default_library",
         "//control/trust/metrics:go_default_library",
         "//pkg/addr:go_default_library",
@@ -75,7 +76,9 @@ go_library(
         "//private/topology:go_default_library",
         "//private/trust:go_default_library",
         "//private/trust/compat:go_default_library",
+        "//private/trust/connect:go_default_library",
         "//private/trust/grpc:go_default_library",
+        "//private/trust/happy:go_default_library",
         "//private/trust/metrics:go_default_library",
         "@com_github_go_chi_chi_v5//:go_default_library",
         "@com_github_go_chi_cors//:go_default_library",
