router: mild improvements to the benchmark code.
Rely on address assignment conventions to simplify concrete addresses
out of test cases.

--- a/acceptance/router_newbenchmark/BUILD.bazel
+++ b/acceptance/router_newbenchmark/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     srcs = [
         "cases.go",
         "main.go",
+        "topo.go",
     ],
     importpath = "github.com/scionproto/scion/acceptance/router_newbenchmark",
     visibility = ["//visibility:private"],
