--- a/acceptance/router_newbenchmark/BUILD.bazel
+++ b/acceptance/router_newbenchmark/BUILD.bazel
@@ -6,14 +6,11 @@ load("//:scion.bzl", "scion_go_binary")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "cases.go",
-        "main.go",
-        "topo.go",
-    ],
+    srcs = ["main.go"],
     importpath = "github.com/scionproto/scion/acceptance/router_newbenchmark",
     visibility = ["//visibility:private"],
     deps = [
+        "//acceptance/router_newbenchmark/cases:go_default_library",
         "//pkg/addr:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/private/serrors:go_default_library",
@@ -39,14 +36,11 @@ scion_go_binary(
 exports_files([
     "conf",
     "test.py",
-    "pause.tar",
 ])
 
 args = [
     "--executable",
     "brload:$(location //acceptance/router_newbenchmark:brload)",
-    "--container-loader",
-    "posix-router:latest#$(location //acceptance/router_newbenchmark:router)",
 ]
 
 data = [
@@ -68,10 +62,4 @@ raw_test(
 container_image(
     name = "router",
     base = "//docker:posix_router",
-)
-
-go_binary(
-    name = "router_newbenchmark",
-    embed = [":go_default_library"],
-    visibility = ["//visibility:public"],
 )
