build: allow building only main services (no scion-ci)
The default target remains unchanged but is renamed to `build-dev`.
The target `build` now only builds the main SCION services.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -118,7 +118,7 @@ steps:
     - label: "E2E: default :docker: (ping)"
       command:
         - echo "--- build"
-        - make build docker-images
+        - make build-dev docker-images
         - echo "--- start topology"
         - ./scion.sh topology -d
         - ./scion.sh run
