router: Move brload into its own subdirectory.
The main motivation is to stop Gazelle from adding a redundant target
router_newbenchmark, which is brload with another name.

--- a/acceptance/router_newbenchmark/cases/BUILD.bazel
+++ b/acceptance/router_newbenchmark/cases/BUILD.bazel
@@ -11,7 +11,10 @@ go_library(
         "topo.go",
     ],
     importpath = "github.com/scionproto/scion/acceptance/router_newbenchmark/cases",
-    visibility = ["//acceptance/router_newbenchmark:__pkg__"],
+    visibility = [
+        "//acceptance/router_newbenchmark:__pkg__",
+        "//acceptance/router_newbenchmark:__subpackages__",
+    ],
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/private/util:go_default_library",
