--- a/acceptance/router_newbenchmark/cases/BUILD.bazel
+++ b/acceptance/router_newbenchmark/cases/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "//pkg/addr:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/private/xtest:go_default_library",
+        "//pkg/scrypto:go_default_library",
         "//pkg/slayers:go_default_library",
         "//pkg/slayers/path:go_default_library",
         "//pkg/slayers/path/scion:go_default_library",
