--- a/pkg/snet/BUILD.bazel
+++ b/pkg/snet/BUILD.bazel
@@ -30,8 +30,12 @@ go_library(
         "//pkg/private/util:go_default_library",
         "//pkg/slayers:go_default_library",
         "//pkg/slayers/path:go_default_library",
+        "//pkg/slayers/path/empty:go_default_library",
         "//pkg/slayers/path/epic:go_default_library",
+        "//pkg/slayers/path/onehop:go_default_library",
+        "//pkg/slayers/path/scion:go_default_library",
         "//private/topology:go_default_library",
+        "//private/topology/underlay:go_default_library",
         "@com_github_google_gopacket//:go_default_library",
     ],
 )
