--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,8 +1,5 @@
 version: v1
 plugins:
-  - plugin: go
-    out: gen
-    opt: paths=source_relative
   - plugin: connect-go
-    out: gen
+    out: pkg
     opt: paths=source_relative
