--- a/pkg/proto/daemon/v1/daemonconnect/BUILD.bazel
+++ b/pkg/proto/daemon/v1/daemonconnect/BUILD.bazel
@@ -2,11 +2,11 @@ load("//tools/lint:go.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["discovery.connect.go"],
-    importpath = "github.com/scionproto/scion/bufgen/proto/discovery/v1/discoveryconnect",
+    srcs = ["daemon.connect.go"],
+    importpath = "github.com/scionproto/scion/pkg/proto/daemon/v1/daemonconnect",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/proto/discovery:go_default_library",
+        "//pkg/proto/daemon:go_default_library",
         "@com_connectrpc_connect//:go_default_library",
     ],
 )
