--- a/pkg/proto/discovery/v1/discoveryconnect/BUILD.bazel
+++ b/pkg/proto/discovery/v1/discoveryconnect/BUILD.bazel
@@ -2,11 +2,11 @@ load("//tools/lint:go.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["hidden_segment.connect.go"],
-    importpath = "github.com/scionproto/scion/bufgen/proto/hidden_segment/v1/hidden_segmentconnect",
+    srcs = ["discovery.connect.go"],
+    importpath = "github.com/scionproto/scion/pkg/proto/discovery/v1/discoveryconnect",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/proto/hidden_segment:go_default_library",
+        "//pkg/proto/discovery:go_default_library",
         "@com_connectrpc_connect//:go_default_library",
     ],
 )
