--- a/control/cmd/control/BUILD.bazel
+++ b/control/cmd/control/BUILD.bazel
@@ -32,6 +32,7 @@ go_library(
         "//control/trust/grpc:go_default_library",
         "//control/trust/metrics:go_default_library",
         "//pkg/addr:go_default_library",
+        "//pkg/connect:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/log:go_default_library",
         "//pkg/metrics:go_default_library",
@@ -41,6 +42,7 @@ go_library(
         "//pkg/proto/control_plane:go_default_library",
         "//pkg/proto/control_plane/v1/control_planeconnect:go_default_library",
         "//pkg/proto/discovery:go_default_library",
+        "//pkg/proto/discovery/v1/discoveryconnect:go_default_library",
         "//pkg/scrypto:go_default_library",
         "//pkg/scrypto/cppki:go_default_library",
         "//pkg/snet:go_default_library",
@@ -55,6 +57,7 @@ go_library(
         "//private/ca/renewal/connect:go_default_library",
         "//private/ca/renewal/grpc:go_default_library",
         "//private/discovery:go_default_library",
+        "//private/discovery/connect:go_default_library",
         "//private/drkey/drkeyutil:go_default_library",
         "//private/keyconf:go_default_library",
         "//private/mgmtapi/cppki/api:go_default_library",
@@ -89,7 +92,6 @@ go_library(
         "@in_gopkg_yaml_v2//:go_default_library",
         "@org_go4_netipx//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//peer:go_default_library",
         "@org_golang_x_net//http2:go_default_library",
         "@org_golang_x_net//http2/h2c:go_default_library",
         "@org_golang_x_sync//errgroup:go_default_library",
