--- a/gateway/control/happy/BUILD.bazel
+++ b/gateway/control/happy/BUILD.bazel
@@ -2,12 +2,14 @@ load("//tools/lint:go.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["fetcher.go"],
-    importpath = "github.com/scionproto/scion/private/trust/happy",
+    srcs = [
+        "discoverer.go",
+        "prefix_fetcher.go",
+    ],
+    importpath = "github.com/scionproto/scion/gateway/control/happy",
     visibility = ["//visibility:public"],
     deps = [
+        "//gateway/control:go_default_library",
         "//pkg/connect/happy:go_default_library",
-        "//pkg/scrypto/cppki:go_default_library",
-        "//private/trust:go_default_library",
     ],
 )
