--- a/private/segment/segfetcher/happy/BUILD.bazel
+++ b/private/segment/segfetcher/happy/BUILD.bazel
@@ -6,8 +6,7 @@ go_library(
     importpath = "github.com/scionproto/scion/private/segment/segfetcher/happy",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/log:go_default_library",
-        "//pkg/private/serrors:go_default_library",
+        "//pkg/connect/happy:go_default_library",
         "//private/segment/segfetcher:go_default_library",
     ],
 )
