--- a/dispatcher/cmd/dispatcher/BUILD.bazel
+++ b/dispatcher/cmd/dispatcher/BUILD.bazel
@@ -6,22 +6,73 @@ go_library(
     srcs = ["main.go"],
     importpath = "github.com/scionproto/scion/dispatcher/cmd/dispatcher",
     visibility = ["//visibility:private"],
-    deps = [
-        "//dispatcher:go_default_library",
-        "//dispatcher/config:go_default_library",
-        "//dispatcher/mgmtapi:go_default_library",
-        "//pkg/addr:go_default_library",
-        "//pkg/log:go_default_library",
-        "//pkg/private/serrors:go_default_library",
-        "//pkg/slayers/path:go_default_library",
-        "//private/app:go_default_library",
-        "//private/app/launcher:go_default_library",
-        "//private/service:go_default_library",
-        "//private/topology:go_default_library",
-        "@com_github_go_chi_chi_v5//:go_default_library",
-        "@com_github_go_chi_cors//:go_default_library",
-        "@org_golang_x_sync//errgroup:go_default_library",
-    ],
+    deps = select({
+        "@io_bazel_rules_go//go/platform:android": [
+            "//dispatcher:go_default_library",
+            "//dispatcher/config:go_default_library",
+            "//dispatcher/mgmtapi:go_default_library",
+            "//pkg/addr:go_default_library",
+            "//pkg/log:go_default_library",
+            "//pkg/private/serrors:go_default_library",
+            "//pkg/slayers/path:go_default_library",
+            "//private/app:go_default_library",
+            "//private/app/launcher:go_default_library",
+            "//private/service:go_default_library",
+            "//private/topology:go_default_library",
+            "@com_github_go_chi_chi_v5//:go_default_library",
+            "@com_github_go_chi_cors//:go_default_library",
+            "@org_golang_x_sync//errgroup:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:darwin": [
+            "//dispatcher:go_default_library",
+            "//dispatcher/config:go_default_library",
+            "//dispatcher/mgmtapi:go_default_library",
+            "//pkg/addr:go_default_library",
+            "//pkg/log:go_default_library",
+            "//pkg/private/serrors:go_default_library",
+            "//pkg/slayers/path:go_default_library",
+            "//private/app:go_default_library",
+            "//private/app/launcher:go_default_library",
+            "//private/service:go_default_library",
+            "//private/topology:go_default_library",
+            "@com_github_go_chi_chi_v5//:go_default_library",
+            "@com_github_go_chi_cors//:go_default_library",
+            "@org_golang_x_sync//errgroup:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:ios": [
+            "//dispatcher:go_default_library",
+            "//dispatcher/config:go_default_library",
+            "//dispatcher/mgmtapi:go_default_library",
+            "//pkg/addr:go_default_library",
+            "//pkg/log:go_default_library",
+            "//pkg/private/serrors:go_default_library",
+            "//pkg/slayers/path:go_default_library",
+            "//private/app:go_default_library",
+            "//private/app/launcher:go_default_library",
+            "//private/service:go_default_library",
+            "//private/topology:go_default_library",
+            "@com_github_go_chi_chi_v5//:go_default_library",
+            "@com_github_go_chi_cors//:go_default_library",
+            "@org_golang_x_sync//errgroup:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:linux": [
+            "//dispatcher:go_default_library",
+            "//dispatcher/config:go_default_library",
+            "//dispatcher/mgmtapi:go_default_library",
+            "//pkg/addr:go_default_library",
+            "//pkg/log:go_default_library",
+            "//pkg/private/serrors:go_default_library",
+            "//pkg/slayers/path:go_default_library",
+            "//private/app:go_default_library",
+            "//private/app/launcher:go_default_library",
+            "//private/service:go_default_library",
+            "//private/topology:go_default_library",
+            "@com_github_go_chi_chi_v5//:go_default_library",
+            "@com_github_go_chi_cors//:go_default_library",
+            "@org_golang_x_sync//errgroup:go_default_library",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 scion_go_binary(
