More cleanup of openwrt packaging. Output packages with versionned names.
For file names, development builds get a version number like:
tag-commitCntSinceTag-dirty, while clean builds get tag-commitCnrSinceTag.

For the version number inside the packages, for dirty builds it is like:
tag-commitCntSinceTag-dirty<timestamp>. The idea being that openwrt
package manager will be happy to install newly built dev packages over a
previous one (including the matching clean build) because its version
number increases. Of course, the timestamp isn't a dependency in itself so
things get rebuild only when something else changes. That's also why we do
not include it in file names.

--- a/.bazelrc
+++ b/.bazelrc
@@ -35,3 +35,6 @@ test:lint --test_tag_filters=lint --test_summary=terse --noshow_progress --exper
 
 # run quietly, only display errors
 common:quiet --ui_event_filters=-warning,-info,-debug,-stdout,-stderr --noshow_progress
+
+# Initialize versioning.bzl properly the first time we do something. See bazel-build-env.
+run --workspace_status_command=./tools/bazel-build-env
