Add coremark as tool. Build it for openwrt too.
In passing, had to fix the openwrt toolchain to declare ar and other
executable files correctly. Also do not link libstdc++ for no reason.

(Coremark of our openwrt-running micropc: 2865.740077)

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -181,6 +181,7 @@ pkg_tar(
         "//router/cmd/router",
         "//scion-pki/cmd/scion-pki",
         "//scion/cmd/scion",
+        "//tools/coremark",
         "//tools/pathdb_dump",
     ],
     mode = "0755",
