--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -1,6 +1,10 @@
 load("@rules_python//python:defs.bzl", "py_binary")
 load("@com_github_scionproto_scion_python_deps//:requirements.bzl", "requirement")
 
+exports_files([
+    "openwrt_gzip_exec",
+])
+
 sh_binary(
     name = "docker_ip",
     srcs = ["docker-ip"],
