Moved coremark out of the main workflow.
This tool is only used for performance testing. It can be built only as needed.

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ __pycache__
 .installstamp
 *.d
 compile_commands.json
+versioning.bzl
 
 # Environment files
 #########################
@@ -70,6 +71,7 @@ doc/venv/
 ##########################
 /deb/
 /openwrt/
+/openwrt-testing/
 
 # CTags
 ##########################
