--- a/private/app/path/BUILD.bazel
+++ b/private/app/path/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//pkg/addr:go_default_library",
         "//pkg/daemon:go_default_library",
+        "//pkg/private/common:go_default_library",
         "//pkg/private/serrors:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/path:go_default_library",
