--- a/scion/cmd/scion/BUILD.bazel
+++ b/scion/cmd/scion/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
         "//pkg/log:go_default_library",
         "//pkg/private/common:go_default_library",
         "//pkg/private/serrors:go_default_library",
+        "//pkg/scrypto:go_default_library",
         "//pkg/snet:go_default_library",
         "//pkg/snet/addrutil:go_default_library",
         "//pkg/snet/path:go_default_library",
@@ -30,6 +31,7 @@ go_library(
         "//private/app/flag:go_default_library",
         "//private/app/path:go_default_library",
         "//private/env:go_default_library",
+        "//private/keyconf:go_default_library",
         "//private/path/pathpol:go_default_library",
         "//private/topology:go_default_library",
         "//private/tracing:go_default_library",
