--- a/dispatcher/cmd/dispatcher/BUILD.bazel
+++ b/dispatcher/cmd/dispatcher/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//tools/lint:go.bzl", "go_library", "go_test")
+load("//tools/lint:go.bzl", "go_library")
 load("//:scion.bzl", "scion_go_binary")
 
 go_library(
@@ -18,7 +18,6 @@ go_library(
             "//private/app:go_default_library",
             "//private/app/launcher:go_default_library",
             "//private/service:go_default_library",
-            "//private/topology:go_default_library",
             "@com_github_go_chi_chi_v5//:go_default_library",
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
@@ -34,7 +33,6 @@ go_library(
             "//private/app:go_default_library",
             "//private/app/launcher:go_default_library",
             "//private/service:go_default_library",
-            "//private/topology:go_default_library",
             "@com_github_go_chi_chi_v5//:go_default_library",
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
@@ -50,7 +48,6 @@ go_library(
             "//private/app:go_default_library",
             "//private/app/launcher:go_default_library",
             "//private/service:go_default_library",
-            "//private/topology:go_default_library",
             "@com_github_go_chi_chi_v5//:go_default_library",
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
@@ -66,7 +63,6 @@ go_library(
             "//private/app:go_default_library",
             "//private/app/launcher:go_default_library",
             "//private/service:go_default_library",
-            "//private/topology:go_default_library",
             "@com_github_go_chi_chi_v5//:go_default_library",
             "@com_github_go_chi_cors//:go_default_library",
             "@org_golang_x_sync//errgroup:go_default_library",
@@ -79,10 +75,4 @@ scion_go_binary(
     name = "dispatcher",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["main_test.go"],
-    embed = [":go_default_library"],
 )
