--- a/tools/end2end/BUILD.bazel
+++ b/tools/end2end/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/private/serrors:go_default_library",
         "//pkg/private/util:go_default_library",
         "//pkg/snet:go_default_library",
+        "//pkg/snet/addrutil:go_default_library",
         "//pkg/snet/metrics:go_default_library",
         "//pkg/snet/path:go_default_library",
         "//private/tracing:go_default_library",
