--- a/tools/pktgen/cmd/pktgen/BUILD.bazel
+++ b/tools/pktgen/cmd/pktgen/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "//pkg/slayers:go_default_library",
         "//pkg/slayers/path/scion:go_default_library",
         "//pkg/snet:go_default_library",
+        "//pkg/snet/addrutil:go_default_library",
         "//pkg/snet/path:go_default_library",
         "//private/app:go_default_library",
         "//private/app/command:go_default_library",
