--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,7 @@ doc/venv/
 
 # Generated package files
 ##########################
-/deb/
-/openwrt/
-/openwrt-testing/
+/installables/
 
 # CTags
 ##########################
