--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -27,10 +27,10 @@ steps:
     command:
       - make dist-deb BFLAGS="--file_name_version=$(tools/git-version)"
       - cd installables;
-      - tar -chaf scion-deb-amd64.tar.gz *_$(tools/git-version)_amd64.deb
-      - tar -chaf scion-deb-arm64.tar.gz *_$(tools/git-version)_arm64.deb
-      - tar -chaf scion-deb-i386.tar.gz *_$(tools/git-version)_i386.deb
-      - tar -chaf scion-deb-armel.tar.gz *_$(tools/git-version)_armel.deb
+      - tar -chaf scion-deb-amd64.tar.gz *_$(../tools/git-version)_amd64.deb
+      - tar -chaf scion-deb-arm64.tar.gz *_$(../tools/git-version)_arm64.deb
+      - tar -chaf scion-deb-i386.tar.gz *_$(../tools/git-version)_i386.deb
+      - tar -chaf scion-deb-armel.tar.gz *_$(../tools/git-version)_armel.deb
     artifact_paths:
       - "installables/*.tar.gz"
     plugins:
@@ -49,7 +49,7 @@ steps:
     command:
       - make dist-openwrt BFLAGS="--file_name_version=$(tools/git-version)"
       - cd installables;
-      - tar -chaf scion-openwrt-x86_64.tar.gz *_$(tools/git-version)_x86_64.ipk
+      - tar -chaf scion-openwrt-x86_64.tar.gz *_$(../tools/git-version)_x86_64.ipk
     artifact_paths:
       - "installables/*.tar.gz"
     plugins:
