--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -25,39 +25,41 @@ steps:
   - wait
   - label: "Package :debian:"
     command:
-      - make dist-deb BFLAGS="--file_name_version=$(tools/git-version)"
+      - version="$(tools/git-version)"
+      - make dist-deb BFLAGS="--file_name_version=${version}"
       - cd installables;
-      - tar -chaf scion-deb-amd64.tar.gz *_$(../tools/git-version)_amd64.deb
-      - tar -chaf scion-deb-arm64.tar.gz *_$(../tools/git-version)_arm64.deb
-      - tar -chaf scion-deb-i386.tar.gz *_$(../tools/git-version)_i386.deb
-      - tar -chaf scion-deb-armel.tar.gz *_$(../tools/git-version)_armel.deb
+      - tar -chaf scion-deb-amd64.tar.gz *_${version}_amd64.deb
+      - tar -chaf scion-deb-arm64.tar.gz *_${version}_arm64.deb
+      - tar -chaf scion-deb-i386.tar.gz *_${version}_i386.deb
+      - tar -chaf scion-deb-armel.tar.gz *_${version}_armel.deb
     artifact_paths:
-      - "installables/*.tar.gz"
+      - "installables/scion-deb-*.tar.gz"
     plugins:
       - scionproto/metahook#v0.3.0:
           post-artifact: |
-            cat << EOF | buildkite-agent annotate --style "info" --context "packages"
+            cat << EOF | buildkite-agent annotate --style "info" --context "packages-deb"
             #### Packages :debian:
-            - <a href="artifact://deb/scion-deb-amd64.tar.gz">amd64</a>
-            - <a href="artifact://deb/scion-deb-arm64.tar.gz">arm64</a>
-            - <a href="artifact://deb/scion-deb-i386.tar.gz">i386</a>
-            - <a href="artifact://deb/scion-deb-armel.tar.gz">armel</a>
+            - <a href="artifact://installables/scion-deb-amd64.tar.gz">amd64</a>
+            - <a href="artifact://installables/scion-deb-arm64.tar.gz">arm64</a>
+            - <a href="artifact://installables/scion-deb-i386.tar.gz">i386</a>
+            - <a href="artifact://installables/scion-deb-armel.tar.gz">armel</a>
             EOF
     key: dist-deb
     retry: *automatic-retry
   - label: "Package :openwrt:"
     command:
-      - make dist-openwrt BFLAGS="--file_name_version=$(tools/git-version)"
+      - version="$(tools/git-version)"
+      - make dist-openwrt BFLAGS="--file_name_version=${version}"
       - cd installables;
-      - tar -chaf scion-openwrt-x86_64.tar.gz *_$(../tools/git-version)_x86_64.ipk
+      - tar -chaf scion-openwrt-x86_64.tar.gz *_${version}_x86_64.ipk
     artifact_paths:
-      - "installables/*.tar.gz"
+      - "installables/scion-openwrt-*.tar.gz"
     plugins:
       - scionproto/metahook#v0.3.0:
           post-artifact: |
-            cat << EOF | buildkite-agent annotate --style "info" --context "packages"
+            cat << EOF | buildkite-agent annotate --style "info" --context "packages-openwrt"
             #### Packages :openwrt:
-            - <a href="artifact://deb/scion-openwrt-x86_64.tar.gz">x86_64</a>
+            - <a href="artifact://installables/scion-openwrt-x86_64.tar.gz">x86_64</a>
             EOF
     key: dist-openwrt
     retry: *automatic-retry
