dist: build openwrt packages (#4464)
The method is the following:

* Add the prebuild openwrt SDKs for the desired target platform as an
http_archive dependency.
* Slap a BUILD.bazel file on top of the SDK so bazel can make it do two
things:
* Configure a bazel toolchain around the compiler suite embedded in the
SDK (musl-gcc/musl-libc).
* Make one openwrt package for each SCION component (the pieces are
provided by the SCION main workspace).
* Declare a platform for each supported openwrt target.
* Bind each openwrt toolchain to its matching platform.
* Add rules to produce ipk packages for scion components (they just
reference and copy the packages produced by the openwrt workspace).
* Use multiplatform_filegroup() to transition these packages to each
supported openwrt platform.
* Add a Make target, dist-openwrt, to build the openwrt file group.

That results in the following chain of dependencies for one given
component and the amd64 target:
=> Want openwrt
=> build openwrt_amd64 (among others, if any)
=> build "component.ipk for openwrt_amd64"
=> copy "component.ipk for openwrt_amd64" from
@external/openwrtSDK_x86_64
=> @external/openwrtSDK_x86_64 obtains "component exec for
openwrt_amd64" from @scion, then embed in component.ipk package.
=> @scion builds component with the openwrt_amd64 toolchain

Embellishments:

* Optionally generate versioned file names for installables. That
removes the need for renaming the files after the build.
* Added coremark to our build (and as an openwrt package). The intent is
to use it in benchmarking as a rough cpu power metric.
* Executable compression when packaging for openwrt, as these devices
can be storage constrained and Go executables are huge. Unfortunately
there's not much I can do for the in-ram size yet.

<!-- Reviewable:start -->
- - -
This change is [<img src="https://reviewable.io/review_button.svg"
height="34" align="absmiddle"
alt="Reviewable"/>](https://reviewable.io/re

--- a/.bazelrc
+++ b/.bazelrc
@@ -14,6 +14,9 @@ build --workspace_status_command=./tools/bazel-build-env
 build --java_runtime_version=remotejdk_11
 # disable legacy_create_init for py_binary, py_test etc. This may eventually become the default.
 build --incompatible_default_to_explicit_init_py
+# Enable resolution of cc toolchain by go toolchain
+build --incompatible_enable_cc_toolchain_resolution
+build --flag_alias=file_name_version=//:file_name_version
 
 # include one of "--define gotags=sqlite_mattn" or "--define gotags=sqlite_modernc"
 # cannot be in common, because query chokes on it.
