testing: produce an openwrt config-only package for router benchmarking.
The router is configured exactly as the router benchmark process wants it. This will
trample any existing router configuration. Not to be installed out of curiosity.

--- a/acceptance/router_benchmark/BUILD.bazel
+++ b/acceptance/router_benchmark/BUILD.bazel
@@ -1,9 +1,16 @@
 load("//acceptance/common:raw.bzl", "raw_test")
 
-exports_files([
-    "conf",
-    "test.py",
-])
+exports_files(
+    [
+        "conf",
+        "test.py",
+        "conf/router.toml",
+        "conf/topology.json",
+        "conf/keys/master0.key",
+        "conf/keys/master1.key",
+    ],
+    visibility = ["//visibility:public"],
+)
 
 args = [
     "--executable",
