testing: Replace SCION_EXPERIMENTAL_BFD_DISABLE with a configuration field in the router toml config file.
Motivations:

* This feature isn't experimental any more. It is used routinely.
* The router already has one configuration source. The ability to configure it
  by changing only that, make testing simpler.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -21,6 +21,10 @@ html latex latexpdf linkcheck help:
 autobuild:
 	sphinx-autobuild "$(SOURCEDIR)" "$(BUILDDIR)" $(filter-out --keep-going,$(SPHINXOPTS))
 
+.PHONY: clean
+clean:
+	rm -rf _build
+
 # Generate commandline docs by building the tools and running their `gendocus` subcommand
 .PHONY: command-gendocs
 command-gendocs:
